--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "bevy-2d"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.73.0"
 
 [profile.dev]
 opt-level = 1
@@ -14,5 +15,5 @@ lto = true
 opt-level = 'z'
 
 [dependencies]
-bevy = { version = "0.11.2" }
-bevy-inspector-egui = "0.20.0"
+bevy = "0.12.0"
+bevy-inspector-egui = "0.21.0"
